[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/ending.gd" type="Script" id=1]
[ext_resource path="res://Assets/BGs/ending 1.png" type="Texture" id=2]
[ext_resource path="res://BG.gd" type="Script" id=3]
[ext_resource path="res://Assets/BGs/ending 2.png" type="Texture" id=4]
[ext_resource path="res://Assets/BGs/heaven.png" type="Texture" id=5]
[ext_resource path="res://Assets/whatever.jpg" type="Texture" id=6]
[ext_resource path="res://Assets/BGs/credit 1.png" type="Texture" id=7]
[ext_resource path="res://Assets/BGs/credit 2.png" type="Texture" id=8]
[ext_resource path="res://Scenes/particle_material.tres" type="Material" id=9]
[ext_resource path="res://Assets/texture.png" type="Texture" id=10]
[ext_resource path="res://addons/SMRT/dialog.gd" type="Script" id=11]
[ext_resource path="res://addons/SMRT/faces/dialog.tres" type="SpriteFrames" id=12]
[ext_resource path="res://addons/SMRT/next_line.png" type="Texture" id=13]
[ext_resource path="res://addons/SMRT/typewriter key 1 sound effect from SFX WORLD HIGH QUALTIY-cq4Ab_FGUv0.wav" type="AudioStream" id=14]
[ext_resource path="res://delay.gd" type="Script" id=15]
[ext_resource path="res://Templates/Mouse.tscn" type="PackedScene" id=16]
[ext_resource path="res://default_env.tres" type="Environment" id=17]

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Theme" id=2]

[sub_resource type="Animation" id=3]
resource_name = "ending"
length = 14.0
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Particles2D2:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BG/BG4:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BG/BG5:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 9.4, 11.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("return:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 11.5, 13.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("return:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 11.5, 13.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "gg"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("BG/transition2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("return:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("return:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="ending" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 673.57, 390.883 )
scale = Vector2( 0.721303, 0.721303 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="BG2" type="Sprite" parent="BG"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 4 )

[node name="BG3" type="Sprite" parent="BG"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 5 )

[node name="transition" type="Sprite" parent="BG"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -3.14996 )
scale = Vector2( 1.99911, 1.99911 )
texture = ExtResource( 6 )

[node name="BG4" type="Sprite" parent="BG"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 7 )

[node name="BG5" type="Sprite" parent="BG"]
modulate = Color( 1, 1, 1, 4.76837e-007 )
texture = ExtResource( 8 )

[node name="transition2" type="Sprite" parent="BG"]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 0, -3.14996 )
scale = Vector2( 1.99911, 1.99911 )
texture = ExtResource( 6 )

[node name="Particles2D2" type="Particles2D" parent="BG"]
position = Vector2( 978.507, -618.197 )
rotation = 3.09026
scale = Vector2( 11.4168, 18.8855 )
emitting = false
amount = 12
lifetime = 20.0
preprocess = 3.0
randomness = 1.0
process_material = ExtResource( 9 )

[node name="Tween" type="Tween" parent="BG"]
playback_speed = 0.5
playback/speed = 0.5

[node name="action_tween" type="Tween" parent="BG"]

[node name="delayed_action" type="Timer" parent="BG"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SMRT" type="NinePatchRect" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0.831373 )
margin_right = 384.0
margin_bottom = 76.0
texture = ExtResource( 10 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 3
patch_margin_bottom = 4
script = ExtResource( 11 )
language = "res://Dialogue/one_last_wish.lan"
beep_WAV = null
font_size = 36
face_sprites = ExtResource( 12 )

[node name="nextLine" type="TextureRect" parent="CanvasLayer/SMRT"]
editor/display_folded = true
margin_left = 361.0
margin_top = 60.0
margin_right = 377.0
margin_bottom = 76.0
texture = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/SMRT/nextLine"]
anims/idle = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/SMRT"]
stream = ExtResource( 14 )

[node name="face" type="AnimatedSprite" parent="CanvasLayer/SMRT"]
frames = ExtResource( 12 )
centered = false

[node name="Timer" type="Timer" parent="CanvasLayer/SMRT"]
wait_time = 0.05

[node name="text_display" type="RichTextLabel" parent="CanvasLayer/SMRT"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
theme = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "HELLO THERE CHILDREN! [b]How are you doing?[/b]"
text = "HELLO THERE CHILDREN! How are you doing?"

[node name="anim" type="AnimationPlayer" parent="CanvasLayer/SMRT"]

[node name="delay" type="Timer" parent="CanvasLayer"]
process_mode = 0
wait_time = 0.22
one_shot = true
script = ExtResource( 15 )

[node name="text_delay" type="Timer" parent="CanvasLayer"]
wait_time = 0.22

[node name="Mouse" parent="." instance=ExtResource( 16 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ending = SubResource( 3 )
anims/gg = SubResource( 4 )

[node name="ending" type="WorldEnvironment" parent="."]
environment = ExtResource( 17 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1104.23
margin_top = 649.813
margin_right = 1144.23
margin_bottom = 663.813
rect_scale = Vector2( 9.76665, 9.76665 )
text = "END"

[node name="Credits" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 4.72643
margin_top = 6.5889
margin_right = 231.726
margin_bottom = 122.589
rect_scale = Vector2( 4.69419, 4.69419 )
text = "CREDITS:
Art: @Alex_holjeiodjio
Programming, Writing: CHOPPA2
Music/SFX Editing: Cubulon (Steam)
Songs Used: 
Ohm - ibi
breath of life - fwimmyfoat
Made with Godot Engine 3.0 using 
SMRT Dialogue plugins by BrunoSXS"

[node name="return" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1200.11
margin_top = 6.47541
margin_right = 1262.11
margin_bottom = 26.4754
rect_scale = Vector2( 2.57117, 2.57117 )
disabled = true
text = "RETURN"
[connection signal="dialog_control" from="CanvasLayer/SMRT" to="." method="_on_SMRT_dialog_control"]
[connection signal="timeout" from="CanvasLayer/delay" to="CanvasLayer/delay" method="_on_delay_timeout"]
[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
